force-app/main/default/objects/redwing__ILT_Instructor__c/redwing__ILT_Instructor__c.object-meta.xml
<CustomObject>
    <label>ILT Instructor</label>
    <nameField>
        <displayFormat>ILTI-{0000000}</displayFormat>
        <label>ILT Instructor Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ILT Instructors</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>