force-app/main/default/objects/redwing__ILT_Instructor__c/fields/redwing__External_Instructor_Id__c.field-meta.xml
<CustomField>
    <fullName>redwing__External_Instructor_Id__c</fullName>
    <inlineHelpText>External ID of Instructor.</inlineHelpText>
    <label>External Instructor Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>