force-app/main/default/objects/redwing__ILT_Instructor__c/fields/redwing__ILT_Class__c.field-meta.xml
<CustomField>
    <fullName>redwing__ILT_Class__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Name of the ILT Class to which ILT instructor is assigned</description>
    <label>ILT Class</label>
    <referenceTo>redwing__ILT_Class__c</referenceTo>
    <relationshipName>ILT_Instructors</relationshipName>
    <type>Lookup</type>
</CustomField>