force-app/main/default/objects/redwing__ILT_Instructor__c/fields/redwing__ILT_Session__c.field-meta.xml
<CustomField>
    <fullName>redwing__ILT_Session__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Name of the ILT Session to which ILT instructor is assigned</description>
    <label>ILT Session</label>
    <referenceTo>redwing__ILT_Session__c</referenceTo>
    <relationshipName>ILT_Instructors</relationshipName>
    <type>Lookup</type>
</CustomField>