force-app/main/default/objects/redwing__ILT_Instructor__c/fields/redwing__Instructor__c.field-meta.xml
<CustomField>
    <fullName>redwing__Instructor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Name of the ILT Instructor</description>
    <label>Instructor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ILT_Instructors</relationshipName>
    <type>Lookup</type>
</CustomField>