force-app/main/default/objects/redwing__ILT_Instructor__c/fields/redwing__Primary__c.field-meta.xml
<CustomField>
    <fullName>redwing__Primary__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If there are multiple ILT Instructors per one ILT Class, one can be selected as primary. For vILT Sessions, primary instructor will be selected as co-organizer and will receive a link to start the vILT Session</description>
    <label>Primary</label>
    <type>Checkbox</type>
</CustomField>