force-app/main/default/objects/redwing__ILT_Instructor__c/fields/redwing__vILT_Account_Member__c.field-meta.xml
<CustomField>
    <fullName>redwing__vILT_Account_Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>vILT Account Member</label>
    <referenceTo>redwing__vILT_Account_Member__c</referenceTo>
    <relationshipLabel>ILT Instructors</relationshipLabel>
    <relationshipName>ILT_Instructors</relationshipName>
    <type>Lookup</type>
</CustomField>