force-app/main/default/objects/redwing__ILT_Instructor__c/validationRules/redwing__Class_Or_Session_Checking.validationRule-meta.xml
<ValidationRule>
    <fullName>redwing__Class_Or_Session_Checking</fullName>
    <active>true</active>
    <errorConditionFormula>OR(AND(ISBLANK(redwing__ILT_Class__c),ISBLANK(redwing__ILT_Session__c)),AND(NOT(ISBLANK(redwing__ILT_Class__c)),NOT(ISBLANK(redwing__ILT_Session__c))))</errorConditionFormula>
    <errorMessage>Instructor should be assigned to ILT Class or ILT Session</errorMessage>
</ValidationRule>