force-app/main/default/objects/redwing__ILT_Instructor__c/validationRules/redwing__Primary_On_Session_Checking.validationRule-meta.xml
<ValidationRule>
    <fullName>redwing__Primary_On_Session_Checking</fullName>
    <active>true</active>
    <errorConditionFormula>AND(redwing__Primary__c, NOT(ISBLANK(redwing__ILT_Session__c)))</errorConditionFormula>
    <errorMessage>Primary Instructor can be selected for ILT Class only</errorMessage>
</ValidationRule>